@@ -34,9 +34,13 @@ class Output(object):
             self.longperfdata.append(self.format_perfdata(check, 79))
 
     def format_status(self, check):
+        if check.name:
+            name_prefix = check.name.upper() + ' '
+        else:
+            name_prefix = ''
         summary_str = check.summary_str.strip()
-        return self._screen_chars('{0} {1}{2}'.format(
-            check.name.upper(), str(check.state).upper(),
+        return self._screen_chars('{0}{1}{2}'.format(
+            name_prefix, str(check.state).upper(),
             ' - ' + summary_str if summary_str else ''), 'status line')
 
     def format_perfdata(self, check, linebreak=None):
